--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Encabezado</h1>
-    <p>Cambio en el ejercicio</p>
+    <h1>Cambio</h1
 </body>
 </html>
